добавлена документация к обычным компонентам

--- a/ApiEasier.Frontend/documentation/coverage.html
+++ b/ApiEasier.Frontend/documentation/coverage.html
@@ -490,7 +490,7 @@
                 <span class="coverage-count">(4/4)</span>
             </td>
         </tr>
-        <tr class="very-good">
+        <tr class="low">
             <td>
                 <!-- miscellaneous -->
                 <a href="./injectables/ApiServiceRepositoryService.html">src/app/repositories/api-service-repository.service.ts</a>
@@ -581,9 +581,81 @@
             </td>
             <td>injectable</td>
             <td>ErrorHandlerService</td>
-            <td align="right" data-sort="66">
-                <span class="coverage-percent">66 %</span>
-                <span class="coverage-count">(2/3)</span>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/3)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./interceptors/HttpErrorInterceptor.html">src/app/services/http-error.interceptor.ts</a>
+            </td>
+            <td>interceptor</td>
+            <td>HttpErrorInterceptor</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/3)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./interfaces/apiServiceShortStructure.html">src/app/services/service-structure-api.ts</a>
+            </td>
+            <td>interface</td>
+            <td>apiServiceShortStructure</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/4)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./interfaces/ApiServiceStructure.html">src/app/services/service-structure-api.ts</a>
+            </td>
+            <td>interface</td>
+            <td>ApiServiceStructure</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/5)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./interfaces/Endpoint.html">src/app/services/service-structure-api.ts</a>
+            </td>
+            <td>interface</td>
+            <td>Endpoint</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/4)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./interfaces/Entity.html">src/app/services/service-structure-api.ts</a>
+            </td>
+            <td>interface</td>
+            <td>Entity</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/5)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./interfaces/EntityShort.html">src/app/services/service-structure-api.ts</a>
+            </td>
+            <td>interface</td>
+            <td>EntityShort</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/4)</span>
             </td>
         </tr>
     </tbody>
